Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjTextObj.quorum
Text t
t:setValue("text")
Number num = t